--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h3>Links</h3>
-                    <a href="lw_resume_old.pdf" target="_blank" class="btn btn-lg btn-dark">Resume</a>
+                    <a href="lw_resume.pdf" target="_blank" class="btn btn-lg btn-dark">Resume</a>
                     <a href="http://github.com/lawortsmann" target="_blank" class="btn btn-lg btn-dark">Github</a>
                     <a href="http://www.linkedin.com/in/luke-wortsmann" target="_blank" class="btn btn-lg btn-dark">LinkedIn</a>
                 </div>
