--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
     <div class="content">
         <h1>Contact Me</h1>
         <p>Email: lawortsmann <i>at</i> gmail <i>dot</i> com</p>
-        <p>GitHub: <a href="https://github.com/lawortsmann">lawortsmann</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/luke-wortsmann/">luke-wortsmann</a></p>
+        <p>GitHub: <a href="https://github.com/lawortsmann" target="_blank">lawortsmann</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/luke-wortsmann/" target="_blank">luke-wortsmann</a></p>
     </div>
 
     <footer>
