--- a/index.html
+++ b/index.html
@@ -13,11 +13,18 @@
     </nav>
 
     <div class="content">
-        <h1>About Me</h1>
-        <p>I am Luke Wortsmann.</p>
-        <p>I live in Chicago.</p>
-        <p>I studied Physics at the University of Illinois Urbana-Champaign.</p>
-        <p>I am a Data Scientist and Quantitative Researcher.</p>
+    <div class="about-section">
+        <div class="about-text">
+            <h1>About Me</h1>
+            <p>I am Luke Wortsmann.</p>
+            <p>I live in Chicago.</p>
+            <p>I studied Physics at the University of Illinois Urbana-Champaign.</p>
+            <p>I am a Data Scientist and Quantitative Researcher.</p>
+        </div>
+        <div class="about-image">
+            <img src="me1.jpg" alt="photo of luke">
+        </div>
+    </div>
     </div>
 
     <footer>
