--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Luke Wortsmann</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -15,7 +18,7 @@
     <div class="content">
         <h1>About Me</h1>
         <p>I am Luke Wortsmann.</p>
-        <p>I live in Chicago.</p>
+        <p>I currently live in Chicago.</p>
         <p>I studied Physics at the University of Illinois Urbana-Champaign.</p>
         <p>I am a Data Scientist and Quantitative Researcher.</p>
     </div>
