--- a/cv.html
+++ b/cv.html
@@ -4,6 +4,9 @@
     <title>Luke Wortsmann - CV</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
     <script>
     function showPasswordInput() {
         document.getElementById('downloadLink').style.display = 'none';
