--- a/cv.html
+++ b/cv.html
@@ -49,12 +49,10 @@
 
     <div class="content">
         <h1>Curriculum Vitae</h1>
-        <div id="downloadSection">
-            <a href="#" id="downloadLink" onclick="showPasswordInput()">Download my full resume (PDF)</a>
-            <div id="passwordInput" style="display:none;">
-                <input type="password" id="resumePassword" placeholder="Enter Password" title="Password is the last four digits of my phone number">
-                <button id="submitPassword">Download</button>
-            </div>
+        <p><a href="#" id="downloadLink" onclick="showPasswordInput()">Download my full resume (PDF)</a></p>
+        <div id="passwordInput" style="display:none;">
+            <input type="password" id="resumePassword" placeholder="Enter Password" title="Password is the last four digits of my phone number">
+            <a id="submitPassword">Download</a>
         </div>
     </div>
 
