--- a/index.html
+++ b/index.html
@@ -7,6 +7,42 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
+    <script>
+    document.addEventListener("DOMContentLoaded", function() {
+        var texts = [
+            'I am Luke Wortsmann.',
+            'I currently live in Chicago.',
+            'I studied Physics at the University of Illinois Urbana-Champaign.',
+            'I am a Data Scientist and Quantitative Researcher.'
+        ];
+        var typingContainers = [
+            document.getElementById('typingText1'),
+            document.getElementById('typingText2'),
+            document.getElementById('typingText3'),
+            document.getElementById('typingText4')
+        ];
+        var typingSpeed = 30;
+        var delayBetweenTexts = 300; // Delay in milliseconds
+
+        function typeWriter(text, container, delay) {
+            var i = 0;
+            setTimeout(function() {
+                var typingInterval = setInterval(function() {
+                    if (i < text.length) {
+                        container.innerHTML += text.charAt(i);
+                        i++;
+                    } else {
+                        clearInterval(typingInterval);
+                    }
+                }, typingSpeed);
+            }, delay);
+        }
+
+        texts.forEach((text, index) => {
+            typeWriter(text, typingContainers[index], delayBetweenTexts * index);
+        });
+    });
+</script>
 </head>
 <body>
     <nav>
@@ -17,10 +53,10 @@
 
     <div class="content">
         <h1>About Me</h1>
-        <p>I am Luke Wortsmann.</p>
-        <p>I currently live in Chicago.</p>
-        <p>I studied Physics at the University of Illinois Urbana-Champaign.</p>
-        <p>I am a Data Scientist and Quantitative Researcher.</p>
+        <p id="typingText1"></p>
+        <p id="typingText2"></p>
+        <p id="typingText3"></p>
+        <p id="typingText4"></p>
     </div>
 
     <footer>
