added styling for dark mode

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             document.getElementById('typingText4')
         ];
         var typingSpeed = 30;
-        var delayBetweenTexts = 300; // Delay in milliseconds
+        var delayBetweenTexts = 300;
 
         function typeWriter(text, container, delay) {
             var i = 0;
