--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             'I am *Luke Wortsmann*.',
             'I currently live in *Chicago*.',
             'I studied *Physics* at the University of Illinois Urbana-Champaign.',
-            'I am a Data Scientist and *Quantitative Researcher*.',
+            'I am a Data Scientist and *Quantitative Developer*.',
         ];
         var typingContainers = [
             document.getElementById('typingText1'),
