--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         <p>Email: lawortsmann <i>at</i> gmail <i>dot</i> com</p>
         <p>GitHub: <a href="https://github.com/lawortsmann" target="_blank">lawortsmann</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/luke-wortsmann/" target="_blank">luke-wortsmann</a></p>
-        <p>Instagram: <a href="https://www.instagram.com/lukewortsmann/" target="_blank">@lukewortsmann</a></p>
+        <p>Instagram: <a href="https://www.instagram.com/luke___w/" target="_blank">@luke___w</a></p>
     </div>
 
     <footer>
