--- a/contact.html
+++ b/contact.html
@@ -1,31 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Luke Wortsmann - Contact</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-    <nav>
-        <a href="index.html">about</a>
-        <a href="cv.html">cv</a>
-        <a href="contact.html" class="active">contact</a>
-    </nav>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Luke Wortsmann - Contact</title>
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <nav>
+            <a href="index.html">about</a>
+            <a href="cv.html">cv</a>
+            <a href="contact.html" class="active">contact</a>
+        </nav>
 
-    <div class="content">
-        <h1>Contact Me</h1>
-        <p>Email: lawortsmann <i>at</i> gmail <i>dot</i> com</p>
-        <p>GitHub: <a href="https://github.com/lawortsmann" target="_blank">lawortsmann</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/luke-wortsmann/" target="_blank">luke-wortsmann</a></p>
-        <p>Instagram: <a href="https://www.instagram.com/luke___w/" target="_blank">@luke___w</a></p>
-    </div>
+        <div class="content">
+            <h1>Contact Me</h1>
+            <p>Email: lawortsmann <i>at</i> gmail <i>dot</i> com</p>
+            <p>
+                GitHub:
+                <a href="https://github.com/lawortsmann" target="_blank"
+                    >lawortsmann</a
+                >
+            </p>
+            <p>
+                LinkedIn:
+                <a
+                    href="https://www.linkedin.com/in/luke-wortsmann/"
+                    target="_blank"
+                    >luke-wortsmann</a
+                >
+            </p>
+            <p>
+                Instagram:
+                <a href="https://www.instagram.com/luke___w/" target="_blank"
+                    >@luke___w</a
+                >
+            </p>
+        </div>
 
-    <footer>
-        <p class="footer-text"></p>
-    </footer>
-</body>
+        <footer>
+            <p class="footer-text"></p>
+        </footer>
+    </body>
 </html>
